--- a/package.json
+++ b/package.json
@@ -10,5 +10,8 @@
   "devDependencies": {
     "@playwright/test": "^1.55.0",
     "@types/node": "^24.5.2"
+  },
+  "dependencies": {
+    "mysql2": "^3.18.2"
   }
 }
